--- a/sic/templates/posts/edit_comment.html
+++ b/sic/templates/posts/edit_comment.html
@@ -7,11 +7,11 @@
     {% if comment.parent and not delete_comment %}
         <strong>in reply to:</strong>
         <ul class="posts">
-            {% include "posts/comment.html" with comment=comment.parent level=0 shallow=True %}
+            {% include "posts/comment.html" with comment=comment.parent level=0 replies=False %}
         </ul>
     {% elif delete_comment %}
         <ul class="posts">
-            {% include "posts/comment.html" with comment=comment level=0 shallow=True %}
+            {% include "posts/comment.html" with comment=comment level=0 replies=False %}
         </ul>
     {% endif %}
     {% if delete_comment %}
