--- a/sic/templates/tags/taggregation.html
+++ b/sic/templates/tags/taggregation.html
@@ -55,7 +55,7 @@
                 <li><a href="{% url 'agg_index' taggregation.pk taggregation.slugify %}">Aggregation frontpage</a></li>
             </ul>
         </nav>
-        <h1>{{ taggregation.name }}{% if user_can_modify %} <small><a href="{% url_with_next 'edit_aggregation' taggregation.pk taggregation.slugify request %}">edit&hellip;</a>{% endif %}&#32;<span class="sparklines" title="activity for last 14 days">{{ taggregation.last_14_days }}</span></small></h1>
+        <h1><span class="sparklines" title="activity for last 14 days">{{ taggregation.last_14_days }}</span>{{ taggregation.name }}{% if user_can_modify %} <small><a href="{% url_with_next 'edit_aggregation' taggregation.pk taggregation.slugify request %}">edit&hellip;</a>{% endif %}</small></h1>
         <div class="button-flex-box" style="width: max-content;">
             <form action="{% url 'copy_taggregation' taggregation.pk %}" method="get">
                 <input type="submit" value="create a copy">
@@ -131,7 +131,7 @@
                                 <tr>
                                     <th><a href="{% url 'edit_aggregation_filter' taggregation.pk taggregation.slugify has.id %}">edit</a></th>
                                     <th>
-                                        <div style="{% if show_colors %}{{ has.tag.color_vars_css }}{% endif %}" class="tag"><span class="tag-name"><a href="{{ has.tag.get_absolute_url }}">{{ has.tag.name }} {{ has.tag.stories.count }}</a></span></div>
+                                        <div style="{% if show_colors %}{{ has.tag.color_vars_css }}{% endif %}" class="tag"><span class="tag-name"><a href="{{ has.tag.get_absolute_url }}">{{ has.tag.name }} {{ has.tag.stories_count }}</a></span></div>
                                     </th>
                                 </tr>
                             </thead>
