--- a/sic/templates/moderation/moderation_log.html
+++ b/sic/templates/moderation/moderation_log.html
@@ -2,7 +2,29 @@
 {% load humanize %}
 {% load utils %}
 {% block title %}Moderation log - sic{% endblock %}
+{% block style %}
+    <style>
+        td>p:only-child {
+            margin:0;
+        }
+        td {
+            padding: 5px 8px;
+        }
+        table {
+            margin: auto;
+            border-collapse: collapse;
+        }
+        tbody tr:nth-child(6n+1), tbody tr:nth-child(6n+2), tbody tr:nth-child(6n+3) {
+            background: #e3e3e3;
+        }
+        tbody tr:nth-child(6n+1) td, tbody tr:nth-child(6n+2) td, tbody tr:nth-child(6n+3) td {
+            border-color: #bab9b9;
+        }
+    </style>
+{% endblock %}
 {% block content %}
+    <h1>Moderation Log</h1>
+    <p class="help-text">All moderation actions <em>should</em> be in this public log.</p>
     <table>
         <thead>
             <tr>
@@ -15,19 +37,19 @@
             {% for log in logs %}
                 {% with log.get_edited_object as edited_object %}
                     <tr>
-                        <td>{{ log.action_time|naturaltime }}</td>
-                        <td><a href="{{ log.user.get_absolute_url }}">{{ log.user }}</a>{% if log.user.is_admin %} (Admin){% elif log.user.is_moderator %} (Moderator){% endif %}</td>
-                        <td>{% if edited_object %}<a href="{{ edited_object.get_absolute_url }}">{{ edited_object }}</a>{% endif %}</td>
+                        <td><p>{{ log.action_time|naturaltime }}</p></td>
+                        <td><p><a href="{{ log.user.get_absolute_url }}">{{ log.user }}</a>{% if log.user.is_admin %} (Admin){% elif log.user.is_moderator %} (Moderator){% endif %}</p></td>
+                        <td><p>{% if edited_object %}<a href="{{ edited_object.get_absolute_url }}">{{ edited_object }}</a>{% endif %}</p></td>
                     </tr>
                     <tr>
                         <td></td>
                         <td></td>
-                        <td>Action: {{ log.action }}</td>
+                        <td><p><b>Action</b>: {{ log.action }}</p></td>
                     </tr>
                     <tr>
                         <td></td>
                         <td></td>
-                        <td>Reason: {{ log.reason }}</td>
+                        <td><p><b>Reason</b>: {{ log.reason }}</p></td>
                     </tr>
                 {% endwith %}
             {% endfor %}
