--- a/sic/static/style.css
+++ b/sic/static/style.css
@@ -397,6 +397,8 @@ template {
 html, body {
   font-family: "Inter", sans-serif;
   font-size: 1.0625rem;
+  font-size: min(1.0625rem, 16px);
+  font-size: clamp(16px, 1.0625rem, 16px);
   width: 100%;
   height: 100%;
   background: var(--bg-color);
