--- a/sic/templates/account/account.html
+++ b/sic/templates/account/account.html
@@ -47,12 +47,13 @@
 {% block content %}
     <nav>
         <ul>
-            <li><a href="{% url 'edit_settings' %}">edit settings</a></li>
-            <li><a href="{% url 'edit_profile' %}">edit profile</a></li>
-            <li><a href="{{ user.get_absolute_url }}">view profile</a></li>
-            <li><a href="{% url 'bookmarks' %}">bookmarks</a></li>
-            <li><a href="{% url 'notifications' %}">notification history</a></li>
-            <li><a href="{% url 'password_change' %}">change password</a></li>
+            <li><a href="{% url 'edit_settings' %}">Edit Settings</a></li>
+            <li><a href="{% url 'edit_profile' %}">Edit Profile</a></li>
+            <li><a href="{{ user.get_absolute_url }}">View Profile</a></li>
+            <li><a href="{% url 'bookmarks' %}">Bookmarks</a></li>
+            <li><a href="{% url 'notifications' %}">Notification History</a></li>
+            <li><a href="{% url 'inbox' %}">Message Inbox</a></li>
+            <li><a href="{% url 'password_change' %}">Change Password</a></li>
         </ul>
     </nav>
     <h1>Your Account</h1>
