--- a/sic/static/style.css
+++ b/sic/static/style.css
@@ -152,6 +152,7 @@ sup {
 img {
   border-style: none;
   display: block;
+  max-width: 100%;
 }
 
 /* Forms
@@ -278,6 +279,10 @@ textarea {
 [type="radio"] {
   box-sizing: border-box; /* 1 */
   padding: 0; /* 2 */
+}
+
+[type="checkbox"] {
+  transform: scale(2);
 }
 
 /**
