--- a/sic/templates/account/edit_profile.html
+++ b/sic/templates/account/edit_profile.html
@@ -4,9 +4,16 @@
     <h1>edit profile</h1>
     <form method="post" class="submit-story-form">
         {% csrf_token %}
-        <table>
-            {{ form }}
-        </table>
-        <input type="submit" value="Submit">
+        {% for field in form %}
+            {{ field.errors }}
+            {{ field.label_tag }}
+            {% if field.help_text %}
+                <p class="help-text">{{ field.help_text }}</p>
+            {% endif %}
+            {{ field }}
+        {% endfor %}
+        <div class="button-flex-box">
+            <input type="submit" value="Submit">
+        </div>
     </form>
 {% endblock %}
