--- a/sic/templates/account/password_change.html
+++ b/sic/templates/account/password_change.html
@@ -5,9 +5,14 @@
     {% if user.is_authenticated %}
         <form class="submit-story-form" method="POST">
             {% csrf_token %}
-            <table>
-                {{ form }}
-            </table>
+            {% for field in form %}
+                {{ field.errors }}
+                {{ field.label_tag }}
+                {% if field.help_text %}
+                    <p class="help-text">{{ field.help_text }}</p>
+                {% endif %}
+                {{ field }}
+            {% endfor %}
             <div class="button-flex-box">
                 <input type="submit" value="update password">
             </div>
